# aibattle

./: .gitignore  LICENSE  README.md  build.sh  extract_deepseek.py  new_game_design_doc.md  package-lock.json  package.json  pyproject.toml
analysis/: prompt_ab_gomoku.md  threat_axis_flip_rows.md  threat_axis_image.md  threat_axis_serial_dl.md
claude-doc/: ARENA_ONBOARDING_DESIGN.md  BOARD_GAMES_DESIGN.md  DESIGN.md  HOLDEM_DESIGN.md  HOLDEM_MODES_IMPLEMENTATION_PLAN.md  PR_new_games.md  REMOTE_AGENT_DESIGN.md  adversarial-findings.md  blog-draft.md  holdem-match-table-implementation-plan.md  localagent-harness-plan.md  new-games-implementation-plan.md
configs/: _smoke_fireworks.yaml  blackjack_gptoss.yaml  blackjack_random.yaml  blotto_gptoss.yaml  blotto_random.yaml  connect4_random_vs_heuristic.yaml  deepseek_vs_oss.yaml  fireworks_vs_heuristic.yaml  gomoku_random_vs_heuristic.yaml  harness_cot_vs_self_consistency.yaml  holdem_estimate_act_ab.yaml  holdem_estimate_act_ab200.yaml  holdem_estimate_act_ab200_kimi.yaml  holdem_estimate_act_smoke.yaml  holdem_human_vs_oss.yaml  holdem_random_vs_heuristic.yaml  holdem_v4_vs_oss.yaml  human_vs_oss.yaml  leduc_gptoss.yaml  leduc_random.yaml  othello_gptoss.yaml  othello_gptoss_smoke.yaml  othello_random.yaml  random_vs_heuristic.yaml
reports/: blackjack_featured.json  blackjack_replay.html  blackjack_report.html  blog.html  blotto_featured.json  blotto_replay.html  blotto_report.html  board_tournament_analysis.json  board_tournament_report.html  board_tournament_tokens.html  board_tournament_tokens.json  connect4_analysis.json  connect4_featured.json  connect4_replay.html  connect4_report.html  gomoku_analysis.json  gomoku_featured.json  gomoku_replay.html  gomoku_report.html  gpt_claude_coached_tournament_summary.md  holdem_1hand_factors.json  holdem_featured.json  holdem_replay.html  holdem_tournament_analysis.json  holdem_tournament_report.html  independent_blackjack_analysis.json  index.html  kuhn_featured.json  kuhn_replay.html  kuhn_tournament_analysis.json  kuhn_tournament_report.html  kuhn_tournament_tokens.html  kuhn_tournament_tokens.json  leaderboard.html  leduc_featured.json  leduc_poker_analysis.json  leduc_replay.html  leduc_report.html  match_decision_quality.json  match_factors.json  (+32 more)
scripts/: _heartbeat.py  aggregate_board_data.py  aggregate_match_data.py  aggregate_tournament_data.py  aggregate_versus_data.py  analyze_blackjack.py  analyze_blackjack_results.py  analyze_board_tournament.py  analyze_gpt_claude.py  analyze_holdem_factors.py  analyze_kuhn_tournament.py  analyze_match_decision_quality.py  analyze_match_factors.py  analyze_match_tournament.py  analyze_new_games.py  (+67 more)
(+201 files in other folders)
