[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aibattle"
version = "0.0.1"
description = "AI Battle"
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "hzzheng", email = "infiniailab5@gmail.com" }]
keywords = ["ai", "battle"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pyyaml>=6.0",
]

[project.optional-dependencies]
model = ["openai>=1.40"]
anthropic = ["anthropic>=0.40"]
http = ["requests>=2.31"]
dev = [
    "openai>=1.40",
    "anthropic>=0.40",
    "requests>=2.31",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
aibattle = "aibattle.cli:main"

[project.urls]
Homepage = "https://github.com/hzzheng/ai-battle"
Issues = "https://github.com/hzzheng/ai-battle/issues"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: end-to-end tests through the real Runner/game (still offline)",
]
